@@ -1,6 +1,6 @@
 /*
     Calimero 3 - A library for KNX network access
-    Copyright (c) 2006, 2024 B. Malinowsky
+    Copyright (c) 2006, 2025 B. Malinowsky
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -139,7 +139,7 @@ public final class Util
 				d.startSearch(2, true);
 				if (d.getSearchResponses().isEmpty())
 					return null;
-				device = d.getSearchResponses().get(0).response().getDevice().getAddress();
+				device = d.getSearchResponses().getFirst().response().getDevice().getAddress();
 			}
 			catch (final InterruptedException e) {
 				e.printStackTrace();
