@@ -1,6 +1,6 @@
 /*
     Calimero 3 - A library for KNX network access
-    Copyright (c) 2021, 2023 B. Malinowsky
+    Copyright (c) 2021, 2025 B. Malinowsky
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -120,7 +120,7 @@ class DiscovererTcpTests {
 			final var result = Discoverer.tcp(c).search(
 					withDeviceDescription(DIB.DEVICE_INFO, DIB.SUPP_SVC_FAMILIES, DIB.AdditionalDeviceInfo,
 							DIB.SecureServiceFamilies, DIB.TunnelingInfo));
-			final var response = result.get().get(0);
+			final var response = result.get().getFirst();
 			assertEquals(server, response.remoteEndpoint());
 		}
 	}
@@ -137,7 +137,7 @@ class DiscovererTcpTests {
 
 			try {
 				final var result = Discoverer.tcp(c).search(Srp.withProgrammingMode());
-				final var response = result.get().get(0);
+				final var response = result.get().getFirst();
 				assertEquals(server, response.remoteEndpoint());
 			}
 			finally {
@@ -168,7 +168,7 @@ class DiscovererTcpTests {
 			mgmt.send(cemi, BlockingMode.WaitForCon);
 
 			final var result = Discoverer.tcp(c).search(Srp.withMacAddress(macAddress));
-			final var response = result.get().get(0);
+			final var response = result.get().getFirst();
 			assertEquals(server, response.remoteEndpoint());
 		}
 	}
