@@ -1,6 +1,6 @@
 /*
     Calimero 3 - A library for KNX network access
-    Copyright (c) 2019, 2024 B. Malinowsky
+    Copyright (c) 2019, 2025 B. Malinowsky
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -195,7 +195,7 @@ class TcpConnectionTest {
 	void newSessionWithDecryptedInterface() {
 		final var keyring = Keyring.load(keyringUri);
 		final var interfaces = keyring.interfaces();
-		final var secIf = interfaces.get(host).get(0);
+		final var secIf = interfaces.get(host).getFirst();
 		final var tunnelInterface = secIf.decrypt(keyringPwd);
 		try (var session = conn.newSecureSession(tunnelInterface)) {
 		}
